--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,3 +33,22 @@ jobs:
       # Runs a single command using the runners shell
       - name: Display Python version
         run: python test.py
+      # Send eamil
+      - name: Send mail
+        if: always()
+        uses: dawidd6/action-send-mail@v2
+        with:
+          # mail server settings
+          server_address: smtp.gmail.com
+          server_port: 465
+          # user credentials
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          # email subject
+          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+          # email body as text
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+          # comma-separated string, send email to
+          to: david_jan76324@hotmail.com
+          # from email name
+          from: John Doe
