--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,13 +26,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.9'
+          python-version: '3.6'
           cache: 'pip'
       - run: pip install -r requirements.txt
 
       # Runs a single command using the runners shell
       - name: Display Python version
-        run: python test.py
+        run: cd mysite;python manage.py check
       # Send eamil
       - name: Send mail
         if: always()
