--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,23 +32,39 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Display Python version
-        run: cd mysite;python manage.py check
+        run: |
+        cd mysite
+        python manage.py check
+    heroku_git_deploy_job:
+      runs-on: ubuntu-latest
+      name: Git Deploy job- A job to deploy django app to heroku using git
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+        - name: Deploy django to heroku
+          uses: nyakaz73/heroku-django-deploy@v0.68 
+          with: 
+            heroku_app_name : ${{ secrets.HEROKU_APP_NAME }}
+            heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+            heroku_email_address: 'david_jan76324@hotmail.com'
+            use_git: true
+            git_branch: master
       # Send eamil
-      - name: Send mail
-        if: always()
-        uses: dawidd6/action-send-mail@v2
-        with:
-          # mail server settings
-          server_address: smtp.gmail.com
-          server_port: 465
-          # user credentials
-          username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          # email subject
-          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-          # email body as text
-          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-          # comma-separated string, send email to
-          to: david_jan76324@hotmail.com
-          # from email name
-          from: John Doe
+      # - name: Send mail
+      #   if: failure()
+      #   uses: dawidd6/action-send-mail@v2
+      #   with:
+      #     # mail server settings
+      #     server_address: smtp.gmail.com
+      #     server_port: 465
+      #     # user credentials
+      #     username: ${{ secrets.EMAIL_USERNAME }}
+      #     password: ${{ secrets.EMAIL_PASSWORD }}
+      #     # email subject
+      #     subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+      #     # email body as text
+      #     body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+      #     # comma-separated string, send email to
+      #     to: david_jan76324@hotmail.com
+      #     # from email name
+      #     from: John Doe
