@modify blank.yml

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,24 +15,24 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  # # This workflow contains a single job called "build"
+  # build:
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.6'
-          cache: 'pip'
-      - run: pip install -r requirements.txt
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-python@v3
+  #       with:
+  #         python-version: '3.6'
+  #         cache: 'pip'
+  #     - run: pip install -r requirements.txt
 
-      # Runs a single command using the runners shell
-      - name: Display Python version
-        run: cd mysite;python manage.py check
+  #     # Runs a single command using the runners shell
+  #     - name: Display Python version
+  #       run: cd mysite;python manage.py check
   heroku_git_deploy_job:
     runs-on: ubuntu-latest
     name: Git Deploy job- A job to deploy django app to heroku using git
