--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,15 +24,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.6'
-          cache: 'pip'
-      - run: pip install -r requirements.txt
+      # - uses: actions/setup-python@v3
+      #   with:
+      #     python-version: '3.6'
+      #     cache: 'pip'
+      # - run: pip install -r requirements.txt
 
-      # Runs a single command using the runners shell
-      - name: Display Python version
-        run: cd mysite;python manage.py check
+      # # Runs a single command using the runners shell
+      # - name: Display Python version
+      #   run: cd mysite;python manage.py check
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
