--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,7 +39,7 @@ jobs:
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} #Must be unique in Heroku
           heroku_email: "david_jan76324@hotmail.com"
       -name: Push to Heroku
-      -run: git push heroku master
+       run: git push heroku master
       # Send eamil
       # - name: Send mail
       #   if: failure()
