--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,8 @@ jobs:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }} #Must be unique in Heroku
           heroku_email: "david_jan76324@hotmail.com"
-          branch: "master"
+          branch: "main"
+          remote_branch: "master"
 
       # Send eamil
       # - name: Send mail
