--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,14 +16,17 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # # This workflow contains a single job called "build"
-  build:
+  custom-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       # - uses: actions/setup-python@v3
       #   with:
       #     python-version: '3.6'
@@ -33,15 +36,25 @@ jobs:
       # # Runs a single command using the runners shell
       # - name: Display Python version
       #   run: cd mysite;python manage.py check
-      - name: Login to Heroku Container registry
-        env: 
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          run: heroku container:login 
-      - name: Push to Heroku
+      - name: Heroku login credentials
+        run: |
+          cat > ~/.netrc <<EOF
+            machine api.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+            machine git.heroku.com
+              login $HEROKU_EMAIL
+              password $HEROKU_API_KEY
+          EOF
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          run: git push -f https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git origin/main:master 
-      
+          HEROKU_EMAIL: "david_jan76324@hotmail.com"
+      - name: Add Heroku remote
+        run: heroku git:remote --app $HEROKU_APP_NAME
+        env:
+          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      - name: Push to Heroku
+        run: git push heroku master
       
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       #   with:
