--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Push to Heroku
         run: | 
           git commit -m "feat:Create index.html"
+          git config --global user.email "david_jan76324@hotmail.com"
           git push heroku master
       
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
