--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,7 +57,7 @@ jobs:
         run: | 
           git commit -m "feat:Create index.html"
           git config --global user.email "david_jan76324@hotmail.com"
-          git config --global user.name "David Jan"
+          git config --global user.name "David_Jan"
           git push heroku master
       
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
