--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Push to Heroku
         run: | 
           git commit -m "feat:Create index.html"
-          git config --global user.name "David_Jan"
+          git config --global user.name "David Jan"
           git config --global user.email "david_jan76324@hotmail.com"
           git push heroku master
       
