--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,9 +55,7 @@ jobs:
           HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       - name: Push to Heroku
         run: | 
-          git commit -m "feat:Create index.html"
-          git config --global user.name "David Jan"
-          git config --global user.email "david_jan76324@hotmail.com"
+          git config user.email "david_jan76324@hotmail.com" && git config user.name "David Jan" && git add -A && git commit -m "Updated code"
           git push heroku master
       
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
