--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,10 @@
-# This is a basic workflow to help you get started with Actions
+# All Reference: 
+# github actions 教學- part1 : Ref: https://www.youtube.com/watch?v=a-EiC_Ll3EM
+# github actions 教學: Ref: https://github.com/twtrubiks/github-actions-tutorial
+# Setup by python: Ref: https://github.com/actions/setup-python
+# Heroku 可以參考這篇，但我沒測試出來 Ref:https://javascript.plainenglish.io/deploy-to-heroku-with-github-actions-a890044a620f
 
+# This is a basic workflow to help you get started with Actions
 name: CI
 
 # Controls when the workflow will run
@@ -16,7 +21,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build_my_project:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
