--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,7 @@ jobs:
         with:
           python-version: '3.9'
           cache: 'pip'
-      - run: |
-        pip install -r requirements.txt
+      - run: pip install -r requirements.txt
 
       - name: Run My python code
         run: python test.py
