--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,7 +52,7 @@ jobs:
       run: |
         cd mysite
         ls
-        python3 manage.py runserver
+        #python3 manage.py runserver
       # Send eamil
       # - name: Send mail
       #   if: always()
