--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,8 +48,8 @@ jobs:
     - name: Download build job
       uses: actions/checkout@v3
 
-    - name: Delete Process
-      run:  kill -9 $(ps aux | grep 'manage.py runserver' | awk '{print $2}') &
+    # - name: Delete Process
+    #   run:  kill -9 $(ps aux | grep 'manage.py runserver' | awk '{print $2}') &
 
     - name: Deploy to my server
       run: |
