--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,12 +35,12 @@ jobs:
           cache: 'pip'
       - run: pip install -r requirements.txt
 
-      - name: Run My python code
-        run: python test.py
+      # - name: Run My python code
+      #   run: python test.py
 
-      # Runs a single command using the runners shell
-      - name: Check Django project
-        run: cd mysite; python manage.py check
+      # # Runs a single command using the runners shell
+      # - name: Check Django project
+      #   run: cd mysite; python manage.py check
   deploy:
     runs-on: self-hosted
     needs: build_my_project
@@ -56,6 +56,7 @@ jobs:
         cd mysite
         ls
         python3 manage.py runserver &
+        echo 'done runserver'
 
       # Send eamil
       # - name: Send mail
