--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         cd mysite
         ls
-        python3 manage.py runserver &
+        python3 manage.py runserver 0.0.0.0:8000 --nothreading
         echo 'done runserver'
 
       # Send eamil
