--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,9 +55,8 @@ jobs:
       run: |
         cd mysite
         ls
-        screen
-        python3 manage.py runserver 0.0.0.0:8000
-        screen -d
+        python3 manage.py runserver &
+    
 
       # Send eamil
       # - name: Send mail
