--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,7 +55,7 @@ jobs:
       run: |
         cd mysite
         ls
-        nohup python3 manage.py runserver &
+        python3 manage.py runserver --nothreading &
     
 
       # Send eamil
