--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,6 +52,7 @@ jobs:
     #   run:  kill -9 $(ps aux | grep 'manage.py runserver' | awk '{print $2}') &
 
     - name: Deploy to my server
+      run: echo "Deploy"
       # run: |
       #   cd mysite
       #   ls
