--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,12 +52,12 @@ jobs:
     #   run:  kill -9 $(ps aux | grep 'manage.py runserver' | awk '{print $2}') &
 
     - name: Deploy to my server
-      #run: echo "Deploy"
-      run: |
-        cd mysite
-        ls
-        python3 manage.py runserver &
-        echo 'done runserver'
+      run: echo "Deploy"
+      # run: |
+      #   cd mysite
+      #   ls
+      #   python3 manage.py runserver &
+      #   echo 'done runserver'
 
 
       # Send eamil
