--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,7 +52,10 @@ jobs:
     #   run:  kill -9 $(ps aux | grep 'manage.py runserver' | awk '{print $2}') &
 
     - name: Deploy to my server
-      run: cd mysite;sh /home/parallels/Desktop/reboot.sh
+      run: |
+        cd mysite
+        tmux
+        sh /home/parallels/Desktop/reboot.sh
       # run: |
       #   cd mysite
       #   ls
