--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,9 +54,8 @@ jobs:
     - name: Deploy to my server
       run: |
         cd mysite
-        tmux
         python3 manage.py runserver &
-        exit
+        sleep 5
       # run: |
       #   cd mysite
       #   ls
