--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  # using post way to build the github action!
+  repository_dispatch:
+    types: [build]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
