--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   # using post way to build the github action!
+  # post url : https://api.github.com/repos/davidjan76324/github_action/dispatches
+  # Ref: https://godleon.github.io/blog/DevOps/learn-GitHub-Action-1/
   repository_dispatch:
     types: [build]
 
@@ -37,6 +39,7 @@ jobs:
           python-version: '3.8'
           cache: 'pip'
       - run: pip install -r requirements.txt
+      - run: echo name is ${{ github.event.client_payload.name }}, age is ${{ github.event.client_payload.age }}
 
       # - name: Run My python code
       #   run: python test.py
