--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -65,15 +65,15 @@ jobs:
     runs-on: ubuntu-20.04
     needs: build_my_project
     steps:
-      name: Deploy to EC2
-      uses: actions/checkout@v3
-      uses: easingthemes/ssh-deploy@main
-      env:
-        SSH_PRIVATE_KEY: ${ { secrets.EC2_SSH_KEY }}
-        REMOTE_HOST: ${ { secrets.HOST_DNS }}
-        REMOTE_USER: ${ { secrets.USERNAME }}
-        TARGET: ${ { secrets.TARGET_DIR }}
-      run: ls
+      - name: Deploy to EC2
+        uses: actions/checkout@v3
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${ { secrets.EC2_SSH_KEY }}
+          REMOTE_HOST: ${ { secrets.HOST_DNS }}
+          REMOTE_USER: ${ { secrets.USERNAME }}
+          TARGET: ${ { secrets.TARGET_DIR }}
+        run: ls
 
 
       # run: |
