--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -65,8 +65,9 @@ jobs:
     runs-on: ubuntu-20.04
     needs: build_my_project
     steps:
-      - name: Deploy to EC2
+      - name: Check the files
         uses: actions/checkout@v3
+      - name: Deploy to EC2
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${ { secrets.EC2_SSH_KEY }}
