@fix bug on run line

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -77,7 +77,7 @@ jobs:
           EVENT_TARGET: ${{ secrets.EC2_VENV_TARGET_DIR }}
       - name: Run Deploy File On AWS EC2
         run: |
-          cd ${{ secrets.EVENT_TARGET }}
+          cd ${{ secrets.EC2_VENV_TARGET_DIR }}
           RUNNER_TRACKING_ID="" && source bin/activate
           cd ${{ secrets.TARGET_DIR }}
           cd mysite
