--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -76,13 +76,10 @@ jobs:
           TARGET: ${{ secrets.TARGET_DIR }}
           EVENT_TARGET: ${{ secrets.EC2_VENV_TARGET_DIR }}
       - name: Run Venv files
-        working-directory: ${{ secrets.EC2_VENV_TARGET_DIR }}
-        run: ls
-      - name: Run Deploy File On AWS EC2
-        working-directory: ${{ secrets.TARGET_DIR }}
         run: |
+          cd /home/ubuntu/Desktop/github_action_venv
           ls
-
+      
       # run: |
       #   cd mysite
       #   ls
