--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -77,6 +77,11 @@ jobs:
           EVENT_TARGET: ${{ secrets.EC2_VENV_TARGET_DIR }}
       - name: Run Venv files
         run: |
+          python3 -m venv github_action_venv
+          cd github_action_venv
+          source bin/action
+          pip install "django<1.9"
+          cd ..
           ls
       
       # run: |
