--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -78,7 +78,8 @@ jobs:
       - name: Run Venv files
         run: |
           pwd
-          
+          cd test_self
+          ls
       
       # run: |
       #   cd mysite
