--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,26 +58,23 @@ jobs:
       
     - name: Deploy to my server
       run: |
-        pwd
-        cd ..
-        ls
-        #cd mysite
-        #RUNNER_TRACKING_ID="" && nohup python3 manage.py runserver &
+        cd mysite
+        RUNNER_TRACKING_ID="" && nohup python3 manage.py runserver &
     
     #--- 複製檔案到 AWS EC2
-    # runs-on: ubuntu-20.04
-    # needs: build_my_project
-    # steps:
-    #   - name: Check the files
-    #     uses: actions/checkout@v3
-    #   - name: Deploy to EC2
-    #     uses: easingthemes/ssh-deploy@main
-    #     env:
-    #       SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-    #       REMOTE_HOST: ${{ secrets.HOST_DNS }}
-    #       REMOTE_USER: ${{ secrets.USERNAME }}
-    #       TARGET: ${{ secrets.TARGET_DIR }}
-    #       EVENT_TARGET: ${{ secrets.EC2_VENV_TARGET_DIR }}
+    # runs-on: ubuntu-latest
+    needs: build_my_project
+    steps:
+      - name: Check the files
+        uses: actions/checkout@v3
+      - name: Deploy to EC2
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.HOST_DNS }}
+          REMOTE_USER: ${{ secrets.USERNAME }}
+          TARGET: ${{ secrets.TARGET_DIR }}
+          EVENT_TARGET: ${{ secrets.EC2_VENV_TARGET_DIR }}
       
       # run: |
       #   cd mysite
