--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,16 +50,16 @@ jobs:
       #   run: cd mysite; python manage.py check
   deploy:
     # --- Deploy to self-hosted
-    runs-on: self-hosted
-    needs: build_my_project
-    steps:
-    - name: Download build job
-      uses: actions/checkout@v3
+    # runs-on: self-hosted
+    # needs: build_my_project
+    # steps:
+    # - name: Download build job
+    #   uses: actions/checkout@v3
       
-    - name: Deploy to my server
-      run: |
-        cd mysite
-        RUNNER_TRACKING_ID="" && nohup python3 manage.py runserver &
+    # - name: Deploy to my server
+    #   run: |
+    #     cd mysite
+    #     RUNNER_TRACKING_ID="" && nohup python3 manage.py runserver &
     
     #--- 複製檔案到 AWS EC2
     runs-on: ubuntu-latest
